# cursor-agent

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
cursor_agent/: __init__.py  auth.py  client.py  session.py  transport.py  types.py
examples/: quickstart.py
