[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cursor-acp"
version = "0.1.0"
description = "Python client for the Cursor CLI Agent Client Protocol (ACP) / agent acp"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Dream contributors" }]
keywords = ["cursor", "acp", "agent", "cli"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/azgo14/cursor-agent"

[tool.hatch.build.targets.wheel]
packages = ["cursor_agent"]
